<resources>
    <string name="app_name">Shuruat</string>
    <string name="SHURUT_APP">SHURUAT</string>
    <string name="heading">&quot;Creating pathways to academic excellence.&quot;</string>
    <string name="Login">REGISTERED USER LOGIN</string>
    <string name="New_Register">NEW USER REGISTRATION</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Home">HOME</string>
    <string name="aboiut_us">ABOUT US</string>
    <string name="CONTACT">CONTACT US</string>
    <string name="Profile">PROFILE</string>
    <string name="WELCOME">WELCOME TO</string>
    <string name="content">Shuruat is a revolutionary mobile app designed to support financially challenged students on their educational journey. Our app is dedicated to collecting important data from students in need of financial aid and connecting them to the appropriate resources and support they require.  Powered by the esteemed Maharaja Agrasen Institute of Technology, Shuruat aims to streamline the process of connecting financially assistance students with potential sources of aid .With Shuruat, you can be part of a transformative movement that reshapes the future of education.</string>
    <string name="content2">\"Unlocking Education\'s Potential: Shuruat, the app for financially challenged students.</string>
    <string name="powered">Powered by Maharaja Agrasen Institute of Technology</string>
    <string name="submit">LOGIN</string>
    <string name="forget">FORGET PASSWARD?</string>
    <string name="New_Registration">New Registration</string>
    <string name="Submit">SUBMIT</string>
    <string name="finacal">Briefly explain why you require financial assistance</string>
    <string name="QUATE">\"Education is the most powerful weapon which you can use to change the world.\" -

        Nelson Mandela</string>
    <string name="contactmait">  Maharaja Agrasen Institute of  Technology</string>
    <string name="postal">Maharaja Agrasen Institute of Technology  PSP Area, Plot No. 1, Sector-22, Rohini,  Delhi-110086  INDIA.</string>
    <string name="phone"> PHONE:-</string>
    <string name="number">91-8448186942</string>
    <string name="email">  Email address:-</string>
    <string name="id">mait@mait.ac.in</string>
    <string name="copy">© 1999 Maharaja Agrasen Institute of Technology, New Delhi. All Rights Reserved.</string>
    <string name="submit_now">submitnow</string>
    <string name="About_home">ABOUT US</string>
    <string name="MISSON">OUR MISSION</string>
    <string name="VISON">OUR VISION</string>
    <string name="mission_content">At Shuruat, our mission is to empower financially challenged students by providing them with the necessary tools, resources, and support to overcome financial barriers and pursue their educational dreams. We are dedicated to streamlining the process of connecting students to financial assistance, creating a comprehensive database that enables organizations and institutions to enhance access to education. Through collaboration and advocacy, we aim to create a more equitable educational landscape where every student has the opportunity to thrive. Our mission is to be a catalyst for change, breaking down barriers and transforming lives through the power of education.</string>
    <string name="vision.">OUR VISION</string>
    <string name="vision_content">At SHURUAT, we believe in the transformative power of education and are committed to empowering financially challenged students to fulfill their educational dreams. We understand that financial barriers can often hinder students from accessing quality education and achieving their full potential. That why we are on a mission to break down those barriers and create a more equitable educational landscape. Our approach is multi-faceted, encompassing various strategies to provide comprehensive support to students in need. One of our key initiatives is streamlining the process of connecting students to financial assistance. We understand that navigating the complex world of scholarships, grants, and loans can be overwhelming, especially for students who may not have access to adequate guidance. Therefore, we have created a user-friendly database that brings together all the relevant resources and tools in one place. This database serves as a valuable hub for both students and organizations, facilitating efficient access to financial aid options.</string>
    <string name="login_regis">REGISTERED USER</string>
    <string name="Extra">TODO</string>
    <string name="logo">TODO</string>
    <string name="image_string">image_string</string>
    <string name="gallery">Gallery</string>
    <string name="aplly">APPLICATION FORM</string>
    <string name="personal">1. Personal Information</string>
    <string name="edu">2. Educational Details:</string>
    <string name="fin">3. Financial Information:</string>
    <string name="sch">Details of any Scholarships or Grants received:</string>
    <string name="re">4. Briefly explain why you require financial assistance and how it will benefit your educational journey:</string>

</resources>