<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/maldives"
    android:foregroundTint="#9F1BD8"
    android:paddingTop="2dp"
    tools:context=".MainActivity">


<!--FLOATING BUTTON-->
    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        app:fabCradleMargin="10dp"
        android:backgroundTint="#3B3864DF"
        app:fabCradleRoundedCornerRadius="50dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/transparent_background"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_nav_menu" />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:src="@drawable/basline_add"
        app:layout_anchor="@id/bottomAppBar"
        app:maxImageSize="40dp"
        android:id="@+id/fab"
        app:tint="@color/blue"/>
<!--FLOATING BUTTON END-->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginStart="@dimen/_107sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/image_string"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021"
        app:srcCompat="@drawable/inginte1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_82sdp"
        android:layout_marginTop="@dimen/_118sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:backgroundTint="#E1D81B60"
        android:fontFamily="serif-monospace"
        android:foregroundTint="#601212"
        android:text="@string/WELCOME"
        android:textSize="@dimen/_23ssp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_155sdp"
        android:fontFamily="serif-monospace"
        android:text="@string/SHURUT_APP"
        android:textSize="@dimen/_23ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="315dp"
        android:layout_height="294dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:shadowColor="#573434"
        android:text="@string/QUATE"
        android:textAppearance="@style/Theme.Shuruat1"
        android:textColor="#9A1D26C3"
        android:textColorHighlight="#C51010"
        android:textColorLink="#931E1E"
        android:textSize="@dimen/_24ssp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>